# deep-space-detection

./: .gitignore  .pre-commit-config.yaml  README.md  autostart.bb  vitis.tcl  vivado.tcl
.github/workflows/: main.yml
docs/resources/: build.md
examples/project-spec/meta-user/recipes-bsp/device-tree/files/: system-user.dtsi
examples/project-spec/meta-user/recipes-extended/timezone/: tzcode-native.bbappend
project-spec/meta-user/recipes-bsp/device-tree/files/: system-user.dtsi
project-spec/meta-user/recipes-modules/axi-tangxi/: Makefile  axi_tangxi.c  axitangxi_dev.c  axitangxi_dev.h  axitangxi_ioctl.h
project-spec/meta-user/recipes-modules/axi-tangxi/examples/: axitangxi_test.c
project-spec/meta-user/recipes-modules/axi-tangxi/include/: libaxitangxi.c
src/: CMakeLists.txt  arithmetic_coding.cpp  arithmetic_coding.h  crc.h  jpeg_yuv.c  transmission_protocol.h
src/axi-tangxi/: Makefile  axi_tangxi.c  axitangxi_dev.c  axitangxi_dev.h  axitangxi_ioctl.h  libaxitangxi.c  libaxitangxi.h  main.c
src/axi-tangxi-driver/axi-tangxi-dev/: README.md
src/axi-tangxi-driver/axi-tangxi-dev/driver/: axi_tangxi.c  axitangxi_dev.c  axitangxi_dev.h  axitangxi_ioctl.h  error.txt  error1.txt
src/axi-tangxi-driver/axi-tangxi-dev/include/: libaxitangxi.h
src/axi-tangxi-driver/test_o/: axitangxi_test
tests/: CMakeLists.txt  transmission_protocol_test.cc
